--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
     <body>
         <nav class="nav-part"> <!-- pjesa e navigimit -->
-            <a href="home.html">
+            <a href="index.html">
             <p> RESTAURANT BAR & FOOD DELIVERY </p></a>
             <ul class="nav-links">
                 <li><a href="home.html" style="color:lightslategray; text-decoration: underline"> Home </a></li>
